fixed text on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,12 +178,10 @@ background-color:transparent;
     padding-top: 20px;
 
 }
-.jumbotron .lead {
-
+.jumbotron .lead { 
     margin: 25px 0;
     color: #ffffff;
-    font-size: 2rem;
-    
+    font-size: 26px;
 }
 
 
